[package]
name = "resend-email"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Client library to send emails using the Resend API"
repository = "https://github.com/jesuscovam/resend-email"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.30"

[dev-dependencies]
serde_json = "1.0.68"
dotenv = "0.15.0"
